@@ -2,8 +2,10 @@ Changelog for hydra
 -------------------
 
 Release 9.5-dev
-* The help for http-form was wrong. the condition variable must always be
-  the *last* parameter, not the third
+* http-form:
+  - The help for http-form was wrong. the condition variable must always be
+    the *last* parameter, not the third
+  - Proxy support was not working correctly
 * smb2: fix for updated libsmb2 which resulted in correct guessing attempts
   not being detected
 * smtp: break early if the server does not allow authentication
